// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type() supports backspace: input: "{Backspace}a", defaultValue: "xxx" 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "Backspace",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "xx",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "xx",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 2,
          "start": 2,
        },
      },
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "a",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "xxa",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "xxa",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "xxa",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`type() supports basic case: input: "abc" 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "a",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "a",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "a",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 1,
          "start": 1,
        },
      },
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "b",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "ab",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "ab",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 2,
          "start": 2,
        },
      },
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "c",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "abc",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "abc",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 3,
          "start": 3,
        },
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "abc",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`type() supports defaultValue prop: input: "ab", defaultValue: "xxx" 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "a",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "xxxa",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "xxxa",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 4,
          "start": 4,
        },
      },
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "b",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "xxxab",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "xxxab",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 5,
          "start": 5,
        },
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "xxxab",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`type() supports multiline: input: "{Enter}\\n", multiline: true 1`] = `
[
  {
    "name": "pressIn",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "focus",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
  {
    "name": "pressOut",
    "payload": {
      "currentTarget": {
        "measure": [MockFunction],
      },
      "nativeEvent": {
        "changedTouches": [],
        "identifier": 0,
        "locationX": 0,
        "locationY": 0,
        "pageX": 0,
        "pageY": 0,
        "target": 0,
        "timestamp": 100100100100,
        "touches": [],
      },
      "persist": [MockFunction],
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "Enter",
      },
    },
  },
  {
    "name": "textInput",
    "payload": {
      "nativeEvent": {
        "previousText": "",
        "range": {
          "end": 1,
          "start": 1,
        },
        "target": 0,
        "text": "
",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "
",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "
",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 1,
          "start": 1,
        },
      },
    },
  },
  {
    "name": "contentSizeChange",
    "payload": {
      "nativeEvent": {
        "contentSize": {
          "height": 32,
          "width": 0,
        },
        "target": 0,
      },
    },
  },
  {
    "name": "keyPress",
    "payload": {
      "nativeEvent": {
        "key": "Enter",
      },
    },
  },
  {
    "name": "textInput",
    "payload": {
      "nativeEvent": {
        "previousText": "
",
        "range": {
          "end": 2,
          "start": 2,
        },
        "target": 0,
        "text": "

",
      },
    },
  },
  {
    "name": "change",
    "payload": {
      "nativeEvent": {
        "eventCount": 0,
        "target": 0,
        "text": "

",
      },
    },
  },
  {
    "name": "changeText",
    "payload": "

",
  },
  {
    "name": "selectionChange",
    "payload": {
      "nativeEvent": {
        "selection": {
          "end": 2,
          "start": 2,
        },
      },
    },
  },
  {
    "name": "contentSizeChange",
    "payload": {
      "nativeEvent": {
        "contentSize": {
          "height": 48,
          "width": 0,
        },
        "target": 0,
      },
    },
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "

",
      },
    },
  },
  {
    "name": "blur",
    "payload": {
      "nativeEvent": {
        "target": 0,
      },
    },
  },
]
`;

exports[`type() works when not all events have handlers: input: "abc" 1`] = `
[
  {
    "name": "changeText",
    "payload": "a",
  },
  {
    "name": "changeText",
    "payload": "ab",
  },
  {
    "name": "changeText",
    "payload": "abc",
  },
  {
    "name": "endEditing",
    "payload": {
      "nativeEvent": {
        "target": 0,
        "text": "abc",
      },
    },
  },
]
`;
